--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>World Clock</h1>
       <footer class="footer">
-        This project was coded by
+        This project was coded with 💝 by
         <a href="https://github.com/NekoLovesSushi" target="_blank"
           >Judith Eleanor Stein</a
         >
@@ -18,7 +18,7 @@
           >GitHub</a
         >
         and is hosting with
-        <a href="https://insertlinkhere.netlify.app" target="_blank"
+        <a href="https://phenomenal-kringle-e9ad36.netlify.app/" target="_blank"
           >Netlify</a
         >
       </footer>  
