--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
           </div>
           <div class="time"></div>
         </div>
+        <div class="city" id="lisbon">
+          <div>
+            <h2>Lisbon</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
       <footer class="footer">
@@ -57,6 +64,8 @@
         <a href="https://phenomenal-kringle-e9ad36.netlify.app/" target="_blank"
           >Netlify</a
         >
+        <br>
+        <a href="index.html" class="footer-home-link">Home</a>
       </footer>  
     <script src="javascript/index.js"></script>  
 </body>
